--- a/.sailsrc
+++ b/.sailsrc
@@ -8,6 +8,10 @@
   },
   "hooks": {
       "sockets": false,
-      "pubsub": false
-  }
+      "pubsub": false,
+      "grunt": false
+  },
+   "paths": {
+       "public": "assets"
+   }
 }
