--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^3.0.2",
     "connect-redis": "^3.4.0",
     "grunt": "1.0.1",
+    "multer": "^1.4.2",
     "node-schedule": "^1.3.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
